<resources>
    <string name="app_name">piapp</string>
    <string name="index">INDEX</string>
    <string name="prefs">PREFS</string>
    <string name="streak">STREAK</string>
    <string name="best_streak">BEST_STREAK</string>
    <string name="previous_date">PREVIOUS_DATE</string>
    <string name="highscore_history">Highscore history</string>
    <string name="all">All</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string-array name="highscore_ranges">
        <item>@string/all</item>
        <item>@string/year</item>
        <item>@string/month</item>
        <item>@string/week</item>
    </string-array>
    <string name="accuracy">ACCURACY</string>
    <string name="current_index">CURRENT_INDEX</string>
    <string name="format_accuracy">%.2f%%</string>
</resources>