<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/back"
        app:iconSize="42sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.db.williamchart.view.DonutChartView
        android:id="@+id/best_streak_dcv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:chart_donutBackgroundColor="?attr/colorPrimaryContainer"
        app:chart_donutRoundCorners="true"
        app:chart_donutThickness="15dp"
        app:chart_donutTotal="100"
        app:layout_constraintBottom_toTopOf="@id/highscore_lcv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/streak_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/best_streak_dcv"
        app:layout_constraintLeft_toLeftOf="@id/best_streak_dcv"
        app:layout_constraintRight_toLeftOf="@id/fire_iv"
        app:layout_constraintTop_toTopOf="@+id/best_streak_dcv" />

    <ImageView
        android:id="@+id/fire_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/streak"
        app:layout_constraintBottom_toBottomOf="@id/streak_tv"
        app:layout_constraintLeft_toRightOf="@+id/streak_tv"
        app:layout_constraintRight_toRightOf="@id/best_streak_dcv"
        app:layout_constraintTop_toTopOf="@+id/streak_tv"
        app:tint="?attr/colorOnSurfaceVariant" />


    <TextView
        android:id="@+id/highscore_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_history"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/highscore_lcv"
        app:layout_constraintLeft_toLeftOf="@id/highscore_lcv" />

    <Spinner
        android:id="@+id/highscore_ranges_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/highscore_tv"
        app:layout_constraintLeft_toRightOf="@id/highscore_tv"
        app:layout_constraintTop_toTopOf="@id/highscore_tv" />

    <com.db.williamchart.view.LineChartView
        android:id="@+id/highscore_lcv"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:chart_axis="none"
        app:chart_gridEffect="dotted"
        app:chart_labelsColor="?attr/colorOnSurface"
        app:chart_labelsSize="10sp"
        app:chart_lineColor="?attr/colorTertiary"
        app:chart_lineThickness="3dp"
        app:chart_smoothLine="true"
        app:layout_constraintBottom_toTopOf="@id/heatmap_cv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/best_streak_dcv" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/heatmap_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscore_lcv" />

</androidx.constraintlayout.widget.ConstraintLayout>